[package]
name = "regress"
version = "0.10.5"
authors = ["ridiculousfish <corydoras@ridiculousfish.com>"]
description = "A regular expression engine targeting EcmaScript syntax"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ridiculousfish/regress"
keywords = ["regex", "regexp"]
edition = "2024"
readme = "README.md"

[workspace]
members = ["regress-tool", "gen-unicode", "."]
default-members = ["regress-tool", "."]

[profile.release]

[features]
default = ["backend-pikevm", "std"]

std = ["memchr/std"]

# Enables the PikeVM backend.
backend-pikevm = []

# Prefers indexes to pointers for bytecode IP and string positions, for the paranoid.
index-positions = []

# Prohibits all uses of unsafe code, for the paranoid.
prohibit-unsafe = []

# Enables UTF-16 support. This disables some optimizations, so it should only be used when necessary.
utf16 = []

# Enables Pattern trait implementation for str::find, str::contains, etc.
pattern = []

[dependencies]
hashbrown = "0.16.0"
memchr = { version = "2.4.0", default-features = false }
