[package]
name = "regress"
version = "0.11.1"
authors = ["ridiculousfish <corydoras@ridiculousfish.com>"]
description = "A regular expression engine targeting EcmaScript syntax"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ridiculousfish/regress"
keywords = ["regex", "regexp"]
edition = "2024"
readme = "README.md"

[workspace]
members = ["regress-tool", "gen-unicode", "."]
default-members = ["regress-tool", "."]

[profile.release]

[features]
default = ["backend-pikevm", "std", "nfa"]

std = ["memchr/std"]

# Enables dependencies needed for `no_std` + `alloc` builds.
alloc = ["dep:hashbrown", "memchr/alloc"]

# Enables the PikeVM backend.
backend-pikevm = []

# Prefers indexes to pointers for bytecode IP and string positions, for the paranoid.
index-positions = []

# Prohibits all uses of unsafe code, for the paranoid.
prohibit-unsafe = []

# Enables UTF-16 support. This disables some optimizations, so it should only be used when necessary.
utf16 = []

# Enables Pattern trait implementation for str::find, str::contains, etc.
pattern = []

# Enables NFA backend with optimized data structures.
nfa = ["smallvec"]

# Enables the TDFA JIT backend: a hand-rolled native code generator that
# specializes a built TDFA into machine code. Requires `std` (executable memory)
# and `nfa` (the TDFA itself), and is incompatible with `prohibit-unsafe`
# (codegen + calling generated code is inherently unsafe). aarch64 + x86-64 only.
# Pulls in `prefilter-teddy`: the JIT path already requires std + unsafe, so the
# Teddy case-insensitive prefilter comes along automatically.
tdfa-jit = ["nfa", "std", "dep:region", "prefilter-teddy"]

# Adds `--dump-jit` disassembly of the generated TDFA-JIT code (via capstone).
# A development aid only; off by default.
tdfa-jit-dump = ["tdfa-jit", "dep:capstone"]

# Uses an aho-corasick Teddy (SIMD multi-substring) prefilter for
# case-insensitive literals (e.g. `Sherlock`/i) instead of the single-rare-byte
# `memchr` scan. Requires `std` (Teddy uses runtime CPU-feature detection) and
# is incompatible with `prohibit-unsafe` (Teddy uses `unsafe` SIMD). When off,
# the `CaseFoldSearcher` path is unchanged; when on, it remains the fallback for
# patterns Teddy declines or unsupported targets. x86-64 + aarch64 only.
prefilter-teddy = ["nfa", "std", "dep:aho-corasick"]

[dependencies]
hashbrown = { version = ">=0.16, <0.18", optional = true }
memchr = { version = "2.4.0", default-features = false }
smallvec = { version = "1.13", optional = true }
# SIMD multi-substring (Teddy) prefilter for the `prefilter-teddy` feature only.
aho-corasick = { version = "1.1", optional = true, default-features = false, features = ["std", "perf-literal"] }
# Cross-platform executable-memory protection for the `tdfa-jit` backend only.
region = { version = "3", optional = true }
# Disassembler for `tdfa-jit-dump` (--dump-jit) only.
capstone = { version = "0.14", optional = true }

[dev-dependencies]
rand = { version = "0.8", features = ["small_rng"] }
# Local clone used only by the backend_bench example as a reference engine;
# dev-only, so it doesn't affect regress's published deps. Path points outside
# the repo so the clone's own cargo workspace doesn't collide with regress's.
regex = { path = "../regress-vendor-regex" }
