[package]
name = "regress-tool"
version = "0.3.0"
authors = ["ridiculousfish <corydoras@ridiculousfish.com>"]
description = "Helpful binary for testing regress"
license = "MIT OR Apache-2.0"
edition = "2024"
default-run = "regress-tool"

[dependencies]
structopt = "0.3"
regress = {path = "../"}
bumpalo = { version = "3.19.0", features = ["boxed", "collections"] }

[[bin]]
name = "regress-tool"
path = "src/regress-tool.rs"
